--- a/projectenigma/.godot/editor/editor_layout.cfg
+++ b/projectenigma/.godot/editor/editor_layout.cfg
@@ -26,7 +26,7 @@ dock_5="Inspector,Node,History,Commit (119)"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Game Scenes/player.tscn", "res://Game Scenes/testlevel.tscn", "res://Components/dialog_player.tscn", "res://UI/PauseMenu.tscn", "res://Player/playercamera.tscn", "res://World Objects/sign.tscn", "res://UI/StaticCamera.tscn")
-current_scene="res://UI/PauseMenu.tscn"
+current_scene="res://Game Scenes/player.tscn"
 center_split_offset=-312
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
