--- a/projectenigma/.godot/editor/editor_layout.cfg
+++ b/projectenigma/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=3
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -10,32 +10,32 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=275
-dock_hsplit_3=-373
+dock_hsplit_3=-376
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://UI/StaticCamera.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://UI/")
+dock_filesystem_selected_paths=PackedStringArray("res://Player/Scripts/sprite_state_machine.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://UI/", "res://Player/", "res://Player/Sprites/", "res://Player/Scripts/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
-dock_5="Inspector,Node,History,Commit (71)"
+dock_5="Inspector,Node,History,Commit (53)"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Game Scenes/player.tscn", "res://Game Scenes/testlevel.tscn", "res://Components/dialog_player.tscn", "res://UI/PauseMenu.tscn", "res://Player/playercamera.tscn", "res://World Objects/sign.tscn", "res://UI/StaticCamera.tscn")
-current_scene="res://UI/PauseMenu.tscn"
-center_split_offset=-312
-selected_default_debugger_tab_idx=0
+open_scenes=PackedStringArray("res://Game Scenes/player.tscn", "res://Game Scenes/testlevel.tscn", "res://World Objects/sign.tscn", "res://UI/StaticCamera.tscn")
+current_scene="res://Game Scenes/player.tscn"
+center_split_offset=-313
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://Components/Attack.gd", "res://Components/DialogArea.gd", "res://Components/DialogPlayer.gd", "res://Components/HealthComponent.gd", "res://HitboxComponent.gd", "res://UI/PauseMenu.gd", "res://Player/Scripts/player.gd", "res://Player/Scripts/PlayerDash.gd", "res://Player/Scripts/PlayerFalling.gd", "res://Player/Scripts/PlayerGrapple.gd", "res://Player/Scripts/PlayerGrapplePull.gd", "res://Player/Scripts/PlayerIdle.gd", "res://Player/Scripts/PlayerJump.gd", "res://Player/Scripts/PlayerRunning.gd", "res://Player/Scripts/PlayerSlide.gd", "res://Player/Scripts/PlayerWalljump.gd", "res://Singletons/SignalBus.gd", "res://Player/Scripts/sprite_state_machine.gd", "res://Player/Scripts/State.gd", "res://Player/Scripts/state_machine.gd"]
-selected_script="res://UI/PauseMenu.gd"
+selected_script="res://Player/Scripts/player.gd"
 open_help=["@GlobalScope", "Array", "CharacterBody2D", "CollisionShape2D", "Input", "JSON", "Node", "Node2D", "Object", "RayCast2D", "Vector2"]
 script_split_offset=247
 list_split_offset=0
